# search-engine

./: .gitignore  Article.cpp  Article.h  Author.cpp  Author.h  AvlNode.h  CMakeLists.txt  DSAvlTree.h  DSHashTable.h  DocHandler.cpp  DocHandler.h  Document.cpp  Document.h  FreqWord.cpp  FreqWord.h  IndexHandler.cpp  IndexHandler.h  Indexer.cpp  Indexer.h  Interface.cpp  Interface.h  README.md  SearchEngine.cpp  SearchEngine.h  Word.cpp  Word.h  main.cpp  stopwords.txt
rapidjson/: document.h  reader.h
rapidjson/error/: error.h
src/: Article.cpp  Article.h  Author.cpp  Author.h  AvlNode.h  DSAvlTree.h  DSHashTable.h  DocHandler.cpp  DocHandler.h  FreqWord.cpp  FreqWord.h  IndexHandler.cpp  IndexHandler.h  Interface.cpp  Interface.h  SearchEngine.cpp  SearchEngine.h  Word.cpp  Word.h  main.cpp  porter2_stemmer.h
